# protego

./: .bumpversion.cfg  .coveragerc  .flake8  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.rst  MANIFEST.in  README.md  README.rst  codecov.yml  pyproject.toml  requirements-py3.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: main.yml  publish.yml  tests-macos.yml  tests-ubuntu.yml  tests-windows.yml
src/: protego.py
src/protego/: __init__.py  _ruleset.py  _utils.py
tests/: fetch_robotstxt.py  test_on_fetched_robotstxt.py  test_on_google_spec.py  test_protego.py  test_recordgroup.py  test_unquote.py  top-10000-websites.txt
tests/test_data/: 103.88.218.109  10minutemail.com  10times.com  6abc.com  99designs.com  9gag.com  aawsat.com  abc13.com  abc7.com  abc7chicago.com  abc7news.com  abc7ny.com  abcnews.go.com  about.gitlab.com  adage.com  addons.mozilla.org  adguard.com  adsabs.harvard.edu  adultfriendfinder.com  adventure.howstuffworks.com  advrider.com  agendaweb.org  ahrefs.com  aib.ie  akc.org  alight.com  alison.com  allafrica.com  alternativeto.net  android.stackexchange.com  androidforums.com  animoto.com  answers.yahoo.com  ao.com  appinventor.mit.edu  appleinsider.com  archinect.com  archive.codeplex.com  arstechnica.com  artofmanliness.com  (+3170 more)
